Adjust implementation to changes of Java 22
- Bump gradle to 8.12 to fully support newer java version
- Adjustments for memory access API that changed (to the worse) with Java 22 and now always requires an explicit offset to be set even if it is 0.